@@ -2,6 +2,7 @@
 # this repository contains the full copyright notices and license terms.
 import base64
 import datetime
+import gzip
 import json
 from decimal import Decimal
 
@@ -188,6 +189,11 @@ class JSONProtocol:
             elif isinstance(data, Exception):
                 return InternalServerError(data)
             response = data
-        return Response(json.dumps(
-                response, cls=JSONEncoder, separators=(',', ':')),
-            content_type='application/json')
+        headers = {}
+        data = json.dumps(
+            response, cls=JSONEncoder, separators=(',', ':'))
+        if len(data) >= 1400 and 'gzip' in request.accept_encodings:
+            data = gzip.compress(data.encode('utf-8'), compresslevel=1)
+            headers['Content-Encoding'] = 'gzip'
+        return Response(
+            data, content_type='application/json', headers=headers)
